# civicaid-voice

./: .dockerignore  .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eval_report_q3_gates.json  eval_report_q4.json  eval_report_q4_fix1.json  eval_report_q4_fix2.json  index.html  package-lock.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
back/: Dockerfile  pyproject.toml  render.yaml  requirements-audio.txt  requirements.txt
back/data/evals/: imv_evals.json  rag_eval_set.json  safety_evals.json  tarjeta_evals.json
back/data/policy/: allowlist.yaml  canonical_rules.yaml
back/data/sources/: README.md  local_seed.yaml
back/data/tramites/: arraigo.json  ayuda_alquiler.json  becas_comedor.json  becas_educacion.json  bono_social_electrico.json  certificado_discapacidad.json  complemento_infancia.json  dependencia.json  empadronamiento.json  homologacion_titulos.json  imv.json  justicia_gratuita.json  nie_tie.json  numero_seguridad_social.json  pension_no_contributiva.json  prestacion_desempleo.json  prestacion_hijo_cargo.json  prestacion_nacimiento.json  proteccion_internacional.json  reagrupacion_familiar.json  renta_minima_insercion.json  subsidio_desempleo.json  (+1 more)
back/schemas/: ProcedureDoc.v1.schema.json  README.md  SourceRegistry.v1.schema.json
back/scripts/: check_sources.py  generate_fal.py  generate_image.py  generate_media_pipeline.py  generate_replicate.py  link_check.py  run_evals.py  test_clara_live.py  validate_policy.py  validate_proceduredoc_schema.py
back/src/: app.py
(+711 files in other folders)
